# OptWBMatrix

./: CMakeLists.txt  README.md  main.cpp
include/OptWBMatrix/: OptWBMatrix.h  random.h  structure.h
include/WBMatrix/: WBMatrix.h
src/OptWBMatrix/: OptWBMatrix.c  random.c
src/WBMatrix/: WBMatrix.c
